# image2physics

./: .gitignore  .gitmodules  README.md  arguments.py  custom_types.py  docs.md  eval_ycb.py  pyproject.toml  reconstruction.py  requirements.txt  segmentation.py  setup.py  utils.py
data/mj_models/: mujocosim.xml  ycb_scene.xml
notebooks/: BLIP2.ipynb  MuJoCo to Pytorch3D.ipynb
simulator/: mujoco_to_nerfstudio.py
utils_dir/: constants.py  utils_mujoco.py
